Fix: Diseño scrollbar

--- a/src/styles/_scrollbar.scss
+++ b/src/styles/_scrollbar.scss
@@ -1,10 +1,8 @@
 ::-webkit-scrollbar {
     background-color: $grey200;
     width: 0.4em;
-}
-   
-::-webkit-scrollbar-thumb {
-    border-radius: $border-radius;
+  }
+
+  ::-webkit-scrollbar-thumb {
     background-color: $grey500;
-    outline: 10px solid $grey600;
-}
+  }
